Bug 1100153 - Gap between browser chrome and app window r=Cwiiis

--- a/apps/system/style/chrome/chrome.css
+++ b/apps/system/style/chrome/chrome.css
@@ -1,7 +1,7 @@
 .appWindow:not(.bar) > .chrome {
   pointer-events: none;
   top: 0;
-  height: calc(var(--statusbar-height) + 4.4rem);
+  height: calc(var(--statusbar-height) + var(--rocketbar-urlbar-height));
   transform: scaleY(var(--rocketbar-scale)) translateY(calc(var(--statusbar-height) * -1));
   transform-origin: top left;
   transition: transform 0.2s ease-in-out, background-color 0.5s ease;
